added the id for scroll

--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -3,6 +3,7 @@ import { getCollection } from 'astro:content';
 import BlogLayout from '../../layouts/BlogLayout.astro';
 import type { AstroComponentFactory } from 'astro/runtime/server/index.js';
 import type { MarkdownHeading } from 'astro';
+import { Image } from 'astro:assets';
 // 1. Generate a new path for every collection entry
 export async function getStaticPaths() {
   const projectsEntries = await getCollection('projects');
@@ -45,7 +46,10 @@ console.log(entry.data.img);
 
 <BlogLayout title={entry.data.title} description={entry.data.description} >
   <h1 transition:name={entry.slug} >{entry.data.title}</h1>
-  <img  src={entry.data.img} class="" alt="this is an image ">
-  <h5 class="pb-6">{remarkPluginFrontmatter.minutesRead}</h5>
+  <p>
+    {entry.data.description}
+  </p>
+  <!-- <h5 class="pb-6">{remarkPluginFrontmatter.minutesRead}</h5> -->
+  <img   src={entry.data.img} class="" alt="this is an image ">
   <Content />
 </BlogLayout>
