--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -23,12 +23,13 @@ const { data:{date,description,img,title,link,tech},slug } = Astro.props;
    
 </style>
 
-<section style={`background:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='100%25' width='100%25'%3E%3Cdefs%3E%3Cpattern id='doodad' width='49' height='49' viewBox='0 0 40 40' patternUnits='userSpaceOnUse' patternTransform='rotate(45)'%3E%3Crect width='100%25' height='100%25' fill='rgba(15, 15, 15,1)'/%3E%3Ccircle cx='20' cy='20' r='5' fill='rgba(70, 195, 145,1)'/%3E%3Ccircle cx='7' cy='40' r='4' fill='rgba(26, 32, 44,1)'/%3E%3Ccircle cx='47' cy='0' r='4' fill='rgba(26, 32, 44,1)'/%3E%3Ccircle cx='7' cy='0' r='4' fill='rgba(26, 32, 44,1)'/%3E%3Ccircle cx='47' cy='40' r='4' fill='rgba(26, 32, 44,1)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23doodad)' height='200%25' width='200%25'/%3E%3C/svg%3E ")`}  class=" bg-white group relative w-full h-[200px] rounded-xl dark:bg-dark-800  flex flex-col justify-between p-2 anime ">
-<!-- <img transition:name={slug} src={img} alt={title}> -->
+<section style={`background:url("/patterns/${title.toLowerCase()}.svg")`}  class=" bg-white group relative w-full sm:h-[200px] h-[300px] rounded-xl dark:bg-dark-800  flex flex-col justify-between p-1 anime ">
+
+    <!-- <img transition:name={slug} src={img} alt={title}> -->
 <section class=" bg-white dark:bg-dark-800 flex flex-col  p-4  justify-between flex-1  w-full rounded-xl">
-      <a transition:name={slug} href={`/projects/${slug}`} class="text-2xl text-primary-500">{title}</a>
-    <p class="line-clamp-2">{description}</p>
-    <p class="line-clamp-2 text-sm ">
+      <a transition:name={slug} href={`/projects/${slug}`} class="sm:text-4xl text-5xl text-primary-500">{title}</a>
+    <p class="line-clamp-2 sm:text-base text-xl">{description}</p>
+    <p class="line-clamp-2 sm:text-base text-xl ">
         Built with : <strong class="text-primary-400">
             {tech} 
         </strong> 
@@ -36,11 +37,11 @@ const { data:{date,description,img,title,link,tech},slug } = Astro.props;
 
     <div 
  class="flex items-baseline justify-between bg-white dark:bg-dark-800">
-        <section class="flex gap-2 pt-4">
-            <a class="bg-primary-500 text-dark-950 rounded-xl px-2 p-1" target="_blank" href={link} >
+        <section class="flex gap-2 pt-4 ">
+            <a class="font-sans bg-primary-500 font-medium text-dark-950 rounded-xl sm:px-2 sm:p-1 p-2 px-4" target="_blank" href={link} >
                website
             </a>
-                    <a href={`/projects/${slug}`} class=" text-light-900  rounded-xl px-2 p-1">
+                    <a href={`/projects/${slug}`} class="font-sans font-medium text-light-900  rounded-xl sm:px-2 sm:p-1 p-2 px-4">
                read more
             </a>
         </section>
