--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,9 @@ const { title,description } = Astro.props;
     </main>
     <Footer />
 		  <style is:global>
+        html {
+  scroll-behavior: smooth;
+}
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600&display=swap'); 
 @font-face {
   font-family: 'Vultura';
