--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -3,7 +3,8 @@ import { getCollection } from 'astro:content';
 import BlogLayout from '../../layouts/BlogLayout.astro';
 import type { AstroComponentFactory } from 'astro/runtime/server/index.js';
 import type { MarkdownHeading } from 'astro';
-// 1. Generate a new path for every collection entry
+import { Image } from 'astro:assets';
+// Generate a new path for every collection entry
 export async function getStaticPaths() {
   const blogEntries = await getCollection('blogs');
   return blogEntries.map(entry => ({
@@ -34,11 +35,9 @@ type Props = {
     }>
 }
   }
-// 2. For your template, you can get the entry directly from the prop
+//  get the entry directly from the prop
 const { entry } = Astro.props;
 const { Content,remarkPluginFrontmatter  } = await entry.render();
-console.log(entry.data.img);
-
 ---
 
 
