testing the prod

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -71,7 +71,7 @@ const url = import.meta.env.PUBLIC_API_URL
   .then(response => response.json())
   .then(data => {
     if (data.success) {
-      alert("Email sent successfully");
+      alert("Email sent successfully :)");
     } else {
       alert("Failed to send email: " + data.error);
     }
