--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import Card from "../components/Card.astro";
 import Layout from "../layouts/Layout.astro";
 import { getCollection, getEntry } from 'astro:content';
