--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import Skills from '../components/Skills.astro';
 import Projects from '../components/Projects.astro';
 import Hero from '../components/Hero.astro';
