changed the blog styling little bit

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -18,7 +18,7 @@ console.log(allBlogPosts);
 
 
 
-<Layout description="Moncef blog" title="Moncef Blog" transition:animate={"slide"}>
+<Layout description="Moncef blog" title="Moncef Blog" transition:animate={"fade"}>
    <main class="flex  gap-12 flex-wrap items-center justify-center">
    {
         allBlogPosts.map((blog)=>{
