--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,6 @@
 ---
 import { z } from "astro:content";
-import { sendEmail } from "../utils/utils";
+import { sendEmail } from "../lib/utils";
 import { formDataSchema } from "../utils/validation";
 import Layout from "../layouts/Layout.astro";
 
