--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,7 +1,7 @@
 ---
 import { z } from "astro:content";
 import { sendEmail } from "../lib/utils";
-import { formDataSchema } from "../utils/validation";
+import { formDataSchema } from "../lib/validation";
 import Layout from "../layouts/Layout.astro";
 
 const errors = { name: "", email: "", message: "" };
