added some animation

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,11 +15,11 @@ const links = [
     name: 'Contact',
     href: '/contact',
   },
-  {
-    ref: '04',
-    name: 'About',
-    href: '/about',
-  },
+  // {
+  //   ref: '04',
+  //   name: 'About',
+  //   href: '/about',
+  // },
 ];
 ---
 
