--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,7 +32,7 @@ const links = [
     class="mx-auto flex max-w-2xl items-baseline justify-between px-4 py-4 sm:px-6 sm:py-6 lg:max-w-7xl lg:px-8"
   >
     <!-- Brand logo -->
-    <a href="/" class="text-4xl font-bold text-primary-500 dark:text-primary-500 ">
+    <a href="/" title="link to moncef portfolio" id="link to moncef portfolio" class="text-4xl font-bold text-primary-500 dark:text-primary-500 ">
       MONCEF
     </a>
 
@@ -40,6 +40,8 @@ const links = [
     <div class="-mr-2 flex items-center space-x-2 sm:space-x-3">
       <!-- Toggle theme mode -->
       <button
+            title="toggle theme button"
+      name="toggle theme button"
         type="button"
         class="text-primary-950 dark:text-primary-200 hover:bg-primary-500/10 dark:hover:bg-primary-400/10 ring-primary-950 inline-flex h-14 w-14 items-center justify-center rounded-full transition focus:outline-none focus-visible:ring-2"
         x-data
@@ -70,6 +72,8 @@ const links = [
 
       <!-- Toggle menu -->
       <button
+      title="toggle menu button"
+      name="toggle menu button"
         type="button"
         class="text-primary-950 dark:text-primary-200 hover:bg-primary-500/10 dark:hover:bg-primary-400/10 ring-primary-950 inline-flex h-14 w-14 items-center justify-center rounded-full transition focus:outline-none focus-visible:ring-2"
         @click="open = !open"
@@ -165,6 +169,8 @@ const links = [
           links.map((link) => (
             <a
               href={link.href}
+              title={link.name}
+              id={link.name}
               class="text-primary-950 hover:bg-light-100 dark:hover:bg-dark-900 rounded-xl p-2 px-6 dark:text-primary-200 group inline-flex py-6 text-3xl font-medium tracking-tight  focus-visible:outline-none sm:py-8 sm:text-4xl"
             >
               <div class="group-focus-visible:outline-primary-950 dark:group-focus-visible:outline-primary-200 flex flex-1 items-center justify-between rounded-3xl group-focus-visible:outline group-focus-visible:outline-2 group-focus-visible:outline-offset-2">
