--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -116,7 +116,7 @@ animateSnowflakes();
     <canvas id="particleCanvas" class="w-full absolute inset-0 z-0"></canvas>
 
   
-  <a href="/blog" class="absolute decoration-transparent bottom-0  right-0 p-2 px-6 rounded-lg dark:bg-dark-950 bg-white transition-all shadow-sm hover:shadow-md hover:shadow-white shadow-white dark:shadow-dark-950">
+  <a href="/blog" title="go to moncef blog" id="go to moncef blog" class="absolute decoration-transparent bottom-0  right-0 p-2 px-6 rounded-lg dark:bg-dark-950 bg-white transition-all shadow-sm hover:shadow-md hover:shadow-white shadow-white dark:shadow-dark-950">
         Want to read my Blogs ?
     </a>
     <main class="  flex flex-col w-full items-center dark:text-primary-50 text-dark-900">
@@ -133,7 +133,7 @@ animateSnowflakes();
     <p class="text-2xl">
         want to see my skills ?
     </p>
-    <a href="#skills" class="text-sm w-full flex-col justify-center items-center gap-2">
+    <a href="#skills" title="go to skills section" id="go to skills section" class="text-sm w-full flex-col justify-center items-center gap-2">
            <p class="text-2xl w-full text-center">
            Go down
        </p>
