--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -112,7 +112,7 @@ createSnowflakes();
 animateSnowflakes();
 
 </script>
-<main class="py-6 w-full h-[80vh]   flex flex-col  items-center relative">
+<main id="hero section" class="py-6 w-full h-[80vh]   flex flex-col  items-center relative">
     <canvas id="particleCanvas" class="w-full absolute inset-0 z-0"></canvas>
 
   
