--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -169,8 +169,8 @@ const links = [
           links.map((link) => (
             <a
               href={link.href}
-              title={link.name}
-              id={link.name}
+              title={`to go to ${link.name} click here`}
+              id={`to go to ${link.name} click here`}
               class="text-primary-950 hover:bg-light-100 dark:hover:bg-dark-900 rounded-xl p-2 px-6 dark:text-primary-200 group inline-flex py-6 text-3xl font-medium tracking-tight  focus-visible:outline-none sm:py-8 sm:text-4xl"
             >
               <div class="group-focus-visible:outline-primary-950 dark:group-focus-visible:outline-primary-200 flex flex-1 items-center justify-between rounded-3xl group-focus-visible:outline group-focus-visible:outline-2 group-focus-visible:outline-offset-2">
