--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -23,7 +23,7 @@ const allProjects = await getCollection('projects');
         <p class="text-2xl w-full text-center">
 Want to collaborate?          
 </p>
-        <a href="/contact" transition:name="contact" title="contact me" id="contact me" class="text-lg group transition-all duration-75  bg-primary-500 text-light-100  dark:text-dark-500 dark:hover:text-dark-950 hover:text-light-50 flex  w-full p-2 px-4  rounded-xl  justify-center items-center gap-2">
+        <a href="/contact" transition:name="contact" title="to contact me click here" id="to contact me click here" class="text-lg group transition-all duration-75  bg-primary-500 text-light-100  dark:text-dark-500 dark:hover:text-dark-950 hover:text-light-50 flex  w-full p-2 px-4  rounded-xl  justify-center items-center gap-2">
 <p>Contact me </p>
             <svg xmlns="http://www.w3.org/2000/svg"
              width="20" height="20"
