changed project card styling a little bit

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -160,7 +160,7 @@ const links = [
         <p
           class="text-dark-500 bg-primary-900/10 p-6 rounded-xl backdrop-blur-2xl dark:text-primary-50  max-w-sm text-xl italic leading-loose"
         >
-          <span class="font-medium">Moncef</span> is a proficient full-stack developer who loves working with TypeScript, reading books, and engaging with startups. If you're interested in collaborating with him, <a href="/contact" class="text-primary-500 hover:text-primary-600 ">click here</a>.
+          <span class="font-medium">Moncef</span> is a proficient full-stack developer who loves working with TypeScript, reading books, and engaging with startups. If you're interested in collaborating with him, <a href="/contact" title="go to contact page" class="text-primary-500 hover:text-primary-600 ">contact me here</a>.
         </p>
       </div> 
       <!-- Navigation -->
