--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -47,7 +47,7 @@ import Skill from "./Skill.astro";
         </section>
         <section class="flex flex-col items-center justify-center mt-10 gap-6">
     <p class="text-2xl">
-        What I buit ?
+        What I built ?
     </p>
     <button class="text-sm w-full flex-col justify-center items-center">
        <a href="#projects" title="go to the projects section" id="go to the projects section" class="flex justify-center items-center w-full animate-bounce ">
