--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -50,17 +50,19 @@ hover:underline text-primary-600 hover:text-primary-500 duration-100 transition-
   </section>
   <section class="flex justify-center items-center gap-2">
      <img 
-        alt='next js' 
+     title="Tailwind css"
+        alt='Tailwind css' 
         class=' w-7 h-7' 
         src={"/skills/tailwindcss.svg"}  
         /> 
         &
         <img 
-        alt='Astro js' 
+        title="Astro"
+        alt='Astro' 
         class=' w-5 h-5' 
         src={"/skills/astrojs.svg"}  
         /> &
-      <svg xmlns="http://www.w3.org/2000/svg" class='w-6 h-6 fill-orange-500' viewBox="0 0 256 256"><path d="M208,144a80,80,0,0,1-160,0c0-30.57,14.42-58.26,31-80l33,32,26.27-72C159.86,41.92,208,88.15,208,144Z" opacity="0.2"></path><path d="M183.89,153.34a57.6,57.6,0,0,1-46.56,46.55A8.75,8.75,0,0,1,136,200a8,8,0,0,1-1.32-15.89c16.57-2.79,30.63-16.85,33.44-33.45a8,8,0,0,1,15.78,2.68ZM216,144a88,88,0,0,1-176,0c0-27.92,11-56.47,32.66-84.85a8,8,0,0,1,11.93-.89l24.12,23.41,22-60.41a8,8,0,0,1,12.63-3.41C165.21,36,216,84.55,216,144Zm-16,0c0-46.09-35.79-85.92-58.21-106.33L119.52,98.74a8,8,0,0,1-13.09,3L80.06,76.16C64.09,99.21,56,122,56,144a72,72,0,0,0,144,0Z"></path></svg>  
+      <svg  xmlns="http://www.w3.org/2000/svg" class='w-6 h-6 fill-orange-500' viewBox="0 0 256 256"><path d="M208,144a80,80,0,0,1-160,0c0-30.57,14.42-58.26,31-80l33,32,26.27-72C159.86,41.92,208,88.15,208,144Z" opacity="0.2"></path><path d="M183.89,153.34a57.6,57.6,0,0,1-46.56,46.55A8.75,8.75,0,0,1,136,200a8,8,0,0,1-1.32-15.89c16.57-2.79,30.63-16.85,33.44-33.45a8,8,0,0,1,15.78,2.68ZM216,144a88,88,0,0,1-176,0c0-27.92,11-56.47,32.66-84.85a8,8,0,0,1,11.93-.89l24.12,23.41,22-60.41a8,8,0,0,1,12.63-3.41C165.21,36,216,84.55,216,144Zm-16,0c0-46.09-35.79-85.92-58.21-106.33L119.52,98.74a8,8,0,0,1-13.09,3L80.06,76.16C64.09,99.21,56,122,56,144a72,72,0,0,0,144,0Z"></path></svg>  
 
     </section>
 </section>
