the same thing fixing issues in larger screens

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -112,7 +112,12 @@ createSnowflakes();
 animateSnowflakes();
 
 </script>
-<main id="hero section" class="py-6 w-full h-[80vh]   flex flex-col  items-center relative">
+
+
+
+
+
+<main id="hero section" class="py-6 w-full h-[80vh] 2xl:py-0  flex flex-col  items-center relative">
     <canvas id="particleCanvas" class="w-full absolute inset-0 z-0"></canvas>
 
   
