changes some things

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -122,7 +122,7 @@ animateSnowflakes();
 
   
   <a href="/blog" title="to go to moncef blog click here" id="to go to moncef blog click here" class="absolute decoration-transparent bottom-0  right-0 p-2 px-6 rounded-lg dark:bg-dark-950 bg-white transition-all shadow-sm hover:shadow-md hover:shadow-white shadow-white dark:shadow-dark-950">
-        Want to read my Blogs ?
+        Want to read my <strong class="text-primary-500">Blogs</strong>  ?
     </a>
     <main class="  flex flex-col w-full items-center dark:text-primary-50 text-dark-900">
 
