--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -21,7 +21,7 @@ const before = howManyDaysAgo(date.toString())
 <section class="flex flex-col gap-4" >
 
     <a transition:name={slug} href={`/blog/${slug}`} id={`link to ${title}`} title={`link to ${title}`} class="m-0 px-5 text-4xl line-clamp-2 font-bold text-primary-500" >{title}</a>
-    <p class=" px-5 line-clamp-5    font-serif text-base dark:text-dark-50 text-light-700 font-light" >{description}</p>
+    <p class=" px-5 line-clamp-5    font-serif text-base dark:text-dark-50 text-light-700 font-bold" >{description}</p>
 </section>
  
 
