changed the submit button text

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -48,7 +48,7 @@ if (Astro.request.method === "POST") {
       <textarea  name="message" required minlength="6" class="w-full rounded-lg h-36 resize-y px-2 bg-primary-600 placeholder:text-light-100" name="message" placeholder="Message" />
     </label>
     {errors.message && <p>{errors.message}</p>}
-    <button name="submit button" title="submit button" class="h-12 w-full rounded-xl bg-light-50 dark:bg-dark-900 dark:text-light-50 text-dark-900" >Register</button>
+    <button name="submit button" title="submit button" class="h-12 w-full rounded-xl bg-light-50 dark:bg-dark-900 dark:text-light-50 text-dark-900" >Send</button>
   </form>
 </main>
 
