changed the font of the website

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,14 +37,7 @@ const { title,description } = Astro.props;
     </main>
     <Footer />
 		  <style is:global>
-        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600&display=swap'); 
-        @font-face {
-          font-family: 'Vultura';
-          src: url('/fonts/Vultura.ttf') format('ttf');
-          font-weight: normal;
-          font-style: serif;
-          font-display: swap;
-        }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
         
         html {
       scroll-behavior: smooth;
@@ -52,7 +45,8 @@ const { title,description } = Astro.props;
 /* *{
 font-family: 'Montserrat', sans-serif;} */
 *{
-font-family: 'Playfair Display', serif;}
+  font-family: 'Poppins', sans-serif;
+}
       [x-cloak] {
         display: none !important;
       }
@@ -65,7 +59,6 @@ font-family: 'Vultura';
    }
 
 
-   
 
     </style>
    <script>
